# egdb_intl

./: .gitignore  CMakeLists.txt  README.md  Readme.md  Readme.txt  egdb_intl32.lib  egdb_intl64.lib  egdb_intl_dll.h  egdb_intl_dll.vba
Huffman/: bitbuf.cpp  bitbuf.h  huffman.cpp  huffman.h
Packed_array/: Packed_array.h
Re-pair/: repair.h  utils.cpp
VBA_test/: CSlice.cls  bitboards.bas  egdb_dll.bas  egdb_dll_gbrules.bas  egdb_gbrules.accdb  perft.bas  test_dll.bas
build_dll/: build_dll.cpp  build_dll.def  build_dll.sln  build_dll.vcxproj  build_dll.vcxproj.filters  dllmain.cpp  posconv.cpp  posconv.h
builddb/: compression_tables.cpp  compression_tables.h  indexing.cpp  indexing.h  indexing.hpp  tunstall_decompress.h
doc/: reference.md
egdb/: compression_tables.cpp  crc.cpp  crc.h  crc.hpp  distance.h  dtw_search.cpp  dtw_search.h  egdb_common.cpp  egdb_common.h  egdb_common.hpp  egdb_dam.cpp  egdb_dtw.cpp  egdb_identify.cpp  egdb_index.cpp  egdb_intl.h  egdb_intl.hpp  egdb_intl_ext.cpp  egdb_intl_ext.h  egdb_mtc_runlen.cpp  egdb_open.cpp  egdb_search.cpp  egdb_search.h  egdb_utils.cpp  egdb_utils.h  egdb_wld_huffman.cpp  egdb_wld_runlen.cpp  egdb_wld_tunstall_v1.cpp  egdb_wld_tunstall_v2.cpp  huffman_decompress.txt  mtc_probe.cpp  mtc_probe.h  platform.h  slice.cpp  slice.h  slice_v2.h  tunstall_decompress.c  tunstall_decompress_v1.txt  tunstall_decompress_v2.txt  wld_search.cpp  wld_search.h
egdb_ext/: egdb_intl_ext.cpp  egdb_intl_ext.h
egdb_query/: CMakeLists.txt  egdb_query.sln  egdb_query.vcxproj  egdb_query.vcxproj.filters  main.cpp
egdb_test/: .gitignore  10x10 HighMtc.txt  CMakeLists.txt  egdb_search.cpp  egdb_search.h  egdb_search.hpp  egdb_test.sln  egdb_test.vcxproj  egdb_test.vcxproj.filters  main.cpp  slice.cpp
engine/: Lock.h  Move.cpp  Move.h  Move_api.h  bicoef.cpp  bicoef.h  bitboard.cpp  bitboard.h  bitboard.hpp  bitcount.cpp  bitcount.h  board.cpp  board.h  bool.cpp  bool.h  config.h  fen.cpp  fen.h  fen.hpp  lock.h  lock.hpp  move.cpp  move.h  move.hpp  move1.cpp  move_api.h  print_move.cpp  print_move.h  project.h  reverse.cpp  reverse.h  reverse.hpp  timer.h
example/: CMakeLists.txt  example.sln  example.vcxproj  example.vcxproj.filters  main.cpp
lock_test/: CMakeLists.txt  lock_test.sln  lock_test.vcxproj  lock_test.vcxproj.filters  main.cpp
test/: test.cpp  test.vcxproj  test.vcxproj.filters
