###############################################################
# Project settings
###############################################################

cmake_minimum_required(VERSION 2.8)
project(egdbl_int CXX)

###############################################################
# Compiler settings
###############################################################

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -g -O0")

###############################################################
# DEPENDENCIES
###############################################################

include_directories(${PROJECT_SOURCE_DIR})

###############################################################
# COMPONENTS
###############################################################

add_subdirectory(egdb_query)
add_subdirectory(egdb_test)
#add_subdirectory(example)
